# openapi_change_checker

./: LICENSE.txt  README.md  action.yml  pyproject.toml
.github/workflows/: action.yml  openapi-check.yml
src/openapi_change_checker/: __about__.py  __init__.py  __main__.py  comparison.py  github.py  report.py
src/openapi_change_checker/consumers/: config.py  impact.py
src/openapi_change_checker/spec_handler/: __init__.py  fastapi.py  static.py
tests/: __init__.py
